# umap-rs

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  UMAP_MATHEMATICAL_DOCUMENTATION.md  UMAP_MATHEMATICAL_DOCUMENTATION_CN.md
.github/workflows/: ci.yml  deep-benchmark-report.yml  ecosystem-python-binding.yml  python-release.yml  release-prep-regression.yml
benchmarks/: ann-e2e-smoke.eval.json  ci_ann_smoke.py  ci_consistency_smoke.py  ci_ecosystem_python_binding_gate.py  ci_no_regression.py  ci_wave1_smoke.py  compare_ecosystem_python_binding.py  compare_real_impls_fair.py  consistency-smoke.eval.json  gate_config.py  gate_thresholds.json  install_r_bench_deps.R  no-regression-smoke.cosine.eval.json  no-regression-smoke.euclidean.eval.json  no-regression-smoke.manhattan.eval.json  release_prep_regression.py  report_ecosystem_python_binding.ann.json  report_ecosystem_python_binding.ann.md  report_ecosystem_python_binding.json  report_ecosystem_python_binding.md  report_real_fair.deep.json  report_real_fair.deep.md  report_real_fair.json  report_real_fair.md  reporting_utils.py  requirements-bench.txt  run_python_umap.py  run_python_umap_algo.py  run_r_uwot.R  run_r_uwot_algo.R  run_rust_umap_py.py  run_rust_umap_py_algo.py  run_umap_rs.py  run_umap_rs_algo.py  rust_bin_overrides.py  rust_build_utils.py  wave1-smoke.eval.json
benchmarks/tests/: test_release_prep_regression.py
docs/adr/: ADR-L8-scope-alignment.md
docs/releases/: umap-rs-v0.3.0.md
reports/: TEMP_parallel_issues_2026-04-01.md  TEMP_parallel_plan_2026-03-31.md  assessment-ann-e2e-smoke-2026-04-01.json  assessment-binding-2026-04-01.json  assessment-binding-2026-04-01.md  assessment-consistency-smoke-2026-04-01.json  assessment-core-fair-2026-04-01.json  assessment-core-fair-2026-04-01.md  assessment-inverse-2026-04-01.json  assessment-sparse-csr-2026-04-01.json  assessment-summary-2026-04-01-current.md  assessment-summary-2026-04-01.md  assessment-wave1-smoke-2026-04-01-current.json  assessment-wave1-smoke-2026-04-01.json  final-convergence-2026-04-01.json  final-convergence-latest.md  release-prep-regression-2026-04-01-current.json
reports/algo-repro-wave/: branch-p1-core-contract.json  branch-p10-release-prep-regression.json  branch-p11-deep-benchmark-quality-gate.json  branch-p2-ann-quality.json  branch-p3-sparse-metrics.json  branch-p4-cli-unification.json  branch-p5-binding-parity.json  branch-p6-parametric-structure.json  branch-p7-aligned-warmstart.json  branch-p8-wave1-gate.json  branch-p9-threshold-normalization.json  branch-spectral-init-optimization-2026-04-01.json  branch-track1-core-graph-semantics.json  branch-track2-ecosystem-gate-schema.json  branch-track3-cli-common-utils.json  branch-track4-bench-portability.json  branch-track5-ci-ann-smoke.json  branch-track6-docs-validation.json  integration-final-convergence-2026-04-01.json  spectral-init-optimization-metrics-2026-04-01.json
reports/release-prep-regression-2026-04-01-current.artifacts/: ann-e2e-smoke.json  consistency-smoke.json  no-regression-smoke-cosine.json  no-regression-smoke-euclidean.json  no-regression-smoke-manhattan.json  wave1-smoke.json
rust_umap/: Cargo.toml  README.md
rust_umap/benchmarks/: eval_aligned_umap.py  eval_euclidean_fit_regression.py  eval_inverse_quality.py  eval_parametric_consistency.py  eval_sparse_csr_vs_umap_learn.py
rust_umap/examples/: aligned_benchmark.rs  aligned_demo.rs  inverse_quality.rs  parametric_eval.rs
rust_umap/src/: aligned.rs  cli_common.rs  lib.rs  main.rs  parametric.rs  sparse.rs
rust_umap/tests/: cli_e2e.rs
rust_umap_py/: Cargo.toml  README.md  pyproject.toml
rust_umap_py/examples/: manual_dense_workflow.py  manual_help_surface.py  manual_precomputed_knn.py  manual_transform_inverse.py
rust_umap_py/python/rust_umap_py/: __init__.py  __init__.pyi  _api.py  _api.pyi
rust_umap_py/src/: lib.rs
rust_umap_py/tests/: test_binding.py
typings/rust_umap_py/: __init__.pyi
umap_rs/: Cargo.toml  README.md  pyproject.toml
umap_rs/examples/: manual_dense_workflow.py  manual_help_surface.py  manual_precomputed_knn.py  manual_transform_inverse.py
umap_rs/python/umap_rs/: __init__.py  _api.py  _api.pyi
umap_rs/src/: lib.rs
umap_rs/tests/: test_binding.py
