[package]
name = "rust_umap"
version = "0.2.0"
edition = "2024"
description = "Rust-first UMAP crate for reproducible benchmarking and thin binding backends"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/wenjiudaijiugui/umap-rs"
homepage = "https://github.com/wenjiudaijiugui/umap-rs"
documentation = "https://github.com/wenjiudaijiugui/umap-rs/tree/main/rust_umap"
keywords = ["umap", "dimensionality-reduction", "manifold-learning", "rust"]
categories = ["algorithms", "science"]

[dependencies]
nalgebra = "0.33"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4"
