[package]
name = "rust_umap_py"
version = "0.3.0"
edition = "2021"
description = "PyO3-based Python bindings for rust_umap with typed public stubs"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/wenjiudaijiugui/umap-rs"
homepage = "https://github.com/wenjiudaijiugui/umap-rs"
documentation = "https://github.com/wenjiudaijiugui/umap-rs/tree/main/rust_umap_py"
keywords = ["umap", "python", "pyo3", "dimensionality-reduction"]
categories = ["api-bindings", "science"]

[lib]
name = "rust_umap_py"
crate-type = ["cdylib"]

[dependencies]
rust_umap = { path = "../rust_umap" }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
