[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "umap-rs"
version = "0.3.0"
description = "Python bindings for rust_umap"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
keywords = ["umap", "dimensionality-reduction", "manifold-learning", "rust", "pyo3"]
dependencies = [
  "numpy>=1.26,<3",
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: BSD License",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/wenjiudaijiugui/umap-rs"
Repository = "https://github.com/wenjiudaijiugui/umap-rs"
Issues = "https://github.com/wenjiudaijiugui/umap-rs/issues"
Changelog = "https://github.com/wenjiudaijiugui/umap-rs/blob/main/CHANGELOG.md"
Documentation = "https://github.com/wenjiudaijiugui/umap-rs/tree/main/umap_rs"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "umap_rs._umap_rs"
python-source = "python"
exclude = [
  "python/umap_rs/__pycache__/*",
]
include = [
  "python/umap_rs/__init__.pyi",
  "python/umap_rs/_api.pyi",
  "python/umap_rs/py.typed",
]
